Modified Experience Section

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
                 <ul class="ml-0 mb-8">
                     <li>Bachelor's Degree in Computer Science</li>
                     <li>University Name</li>
-                    <li>Graduation Year: 20XX</li>
+                    <li>Graduation Year: 2023</li>
                 </ul>
                 <h2 class="text-2xl font-bold mb-4">Expertise</h2>
                 <hr class="section-divider bg-white w-full mb-8">
-                <ul class="ml-0 mb-8">
+                <ul class="ml-0 mb-8 list-disc list-inside">
                     <li>Web Development</li>
                     <li>UI/UX Design</li>
                     <li>Database Management</li>
@@ -57,10 +57,33 @@
 
             <h2 class="text-2xl font-bold mb-4 text-left">Experience</h2>
             <hr class="section-divider bg-[#323b4c] mb-8">
-            <ul class="mb-8">
-                <li>Company A: Software Engineer (2019-2021)</li>
-                <li>Company B: Front-end Developer (2017-2019)</li>
-                <li>Company C: Intern (2016-2017)</li>
+            <ul class="mb-8 ml-4 list-disc">
+                <li class="mb-6">
+                    <span class="font-bold text-lg">2019-2021</span><br>
+                    <span class="font-bold text-[#323b4c]">Company A</span><br>
+                    <span class="text-xl font-semibold">Software Engineer</span><br>
+                    <span class="text-gray-600">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae urna
+                        nec ante vehicula feugiat. Phasellus tincidunt luctus turpis, vitae iaculis odio ultricies
+                        in. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae urna nec ante vehicula
+                        feugiat. Phasellus tincidunt luctus turpis, vitae iaculis odio ultricies in. </span>
+                </li>
+                <li class="mb-6">
+                    <span class="font-bold text-lg">2017-2019</span><br>
+                    <span class="font-bold text-[#323b4c]">Company B</span><br>
+                    <span class="text-xl font-semibold">Front-end Developer</span><br>
+                    <span class="text-gray-600">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae urna
+                        nec ante vehicula feugiat. Phasellus tincidunt luctus turpis, vitae iaculis odio ultricies
+                        in. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae urna nec ante vehicula
+                        feugiat. Phasellus tincidunt luctus turpis, vitae iaculis odio ultricies in. </span>
+                </li>
+                <li class="mb-6">
+                    <span class="font-bold text-lg">2016-2017</span><br>
+                    <span class="font-bold text-[#323b4c]">Company C</span><br>
+                    <span class="text-xl font-semibold">Intern</span><br>
+                    <span class="text-gray-600">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae urna
+                        nec ante vehicula feugiat. Phasellus tincidunt luctus turpis, vitae iaculis odio ultricies
+                        in.</span>
+                </li>
             </ul>
             <h2 class="text-2xl font-bold mb-4 text-left">References</h2>
             <hr class="section-divider bg-[#323b4c] mb-8">
